--- a/croomgraph/package.json
+++ b/croomgraph/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.5",
+    "@mui/material-nextjs": "^6.1.5",
+    "@mui/x-charts": "^7.21.0",
     "axios": "^1.7.7",
     "next": "14.2.15",
     "react": "^18",
