--- a/croomgraph/package.json
+++ b/croomgraph/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.7.7",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.80.5"
   },
   "devDependencies": {
     "@types/node": "^20",
