--- a/croomgraph/package.json
+++ b/croomgraph/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.80.5"
+    "sass": "^1.80.5",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
