--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3"
 services:
   mongo:
     image: mongo
@@ -10,3 +10,17 @@ services:
     volumes:
       - ./croomgraphDB:/data/db
     restart: unless-stopped
+  room:
+    build: ./croomgraph/.
+    ports:
+      - '3000:3000'
+    restart: unless-stopped
+  backend:
+    build: .
+    ports:
+      - '8080:8080'
+    environment:
+      - MONGO_URI=mongo:27017
+    restart: unless-stopped
+
+
